objects/CaseMilestoneSync__c.object
<CustomObject>
    <fields>
        <fullName>BusinessHours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Case_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Case_Milestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CompletionDate__c</fullName>
        <label>Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ElapsedTimeInDays__c</fullName>
        <label>Elapsed Time (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ElapsedTimeInHrs__c</fullName>
        <label>Elapsed Time (Hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ElapsedTimeInMins__c</fullName>
        <label>Elapsed Time (Mins)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsCompleted__c</fullName>
        <formula>NOT(ISBLANK(CompletionDate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsResolution__c</fullName>
        <formula>CONTAINS(Name, "Resolution")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resolution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsResponse__c</fullName>
        <formula>CONTAINS(Name, "Response")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsViolated__c</fullName>
        <formula>CompletionDate__c &gt; TargetDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Violation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MilestoneTypeId__c</fullName>
        <label>Milestone Type Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResolutionUnderDay_1__c</fullName>
        <formula>AND(
  CONTAINS(Name, "Resolution"),
  ElapsedTimeInDays__c &lt; 1 /* Less Than 1 Day */
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resolution Under 1 Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ResponseUnderHour_1__c</fullName>
        <formula>AND(
  CONTAINS(Name, "Response"),
  ElapsedTimeInMins__c  &lt; 60  /* Less Than 1 Hour */
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Under 1 Hour</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TargetDate__c</fullName>
        <label>Target Date</label>
        <type>DateTime</type>
    </fields>
    <description>Used to create copies of completed case milestones to allow greater detail of customization.  Currently, standard case milestones do not offer this customization.</description>
    <label>Case Milestone</label>
    <nameField>
        <label>Case Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>